--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </div><!--end top-box-->
 <div class="price-box">
     <div class="top-box">
-    <h2 class="p-name-single">single hoisting</h2>
+    <h2 class="p-name-single">premium hoisting</h2>
     <h2 class="price">$15 <span>/month</span></h2>
     <a href="#" class="btn single-btn">choose plan</a>
     <p>$ 20.99 /mo when you renew</p>
@@ -78,7 +78,7 @@
 </div><!--end top-box--> 
 <div class="price-box">
     <div class="top-box">
-    <h2 class="p-name-single">single hoisting</h2>
+    <h2 class="p-name-single">business hoisting</h2>
     <h2 class="price">$20 <span>/month</span></h2>
     <a href="#" class="btn single-btn">choose plan</a>
     <p>$ 60.99 /mo when you renew</p>
